--- a/accelview_classes/accelview_classes.csproj
+++ b/accelview_classes/accelview_classes.csproj
@@ -44,9 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccelData.cs" />
-    <Compile Include="Data.cs" />
-    <Compile Include="enuma.cs" />
+    <Compile Include="AccelData\AccelData.cs" />
+    <Compile Include="AccelData\enum.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -55,10 +54,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SensorData.cs" />
-    <Compile Include="Statistics.cs" />
-    <Compile Include="TMP.cs" />
-    <Compile Include="XYZData.cs" />
+    <Compile Include="AccelData\SensorData.cs" />
+    <Compile Include="AccelData\Statistics.cs" />
+    <Compile Include="AccelData\XYZData.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -71,7 +69,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
